<resources>
    <string name="app_name">World Cars</string>
    <string name="gita">GITA Dasturchilar Akademiyasi | Marafon</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="lada">Lada</string>
    <string name="wolksvagen">Wolksvagen</string>
    <string name="lamborghini">Lamborghini</string>
    <string name="chevrolet">Chevrolet</string>
    <string name="ferrari">Ferrari</string>
    <string name="bmw">BMW</string>
    <string name="audi">Audi</string>
    <string name="audi_a5">Pre-facelift Audi A5 Coupé 2.0 TDi SE
Overview
Manufacturer	Audi
Production	2007–2016
Assembly
Germany: Ingolstadt (Audi head office)
Germany: Neckarsulm (Audi AG)
Designer	Walter de Silva
Satoshi Wada (2003)
Achim Badstübner(facelift)[2][3]
Markus Gleitz (Sportback)
Body and chassis
Platform	Volkswagen Group MLB platform
Powertrain
Engine	1.8 L TFSI I4
2.0 L TFSI I4
3.2 L FSI V6
3.0 L TFSI V6
4.2 L FSI V8
2.0 L TDI I4
2.7 L TDI V6
3.0 L TDI V6
Transmission	6-speed manual,
6-speed Tiptronic automatic
7-speed S tronic dual-clutch automatic
8-speed Tiptronic Automatic
Multitronic CVT
Dimensions
Wheelbase	Coupé Cabriolet: 2,751 mm (108.3 in)
Sportback: 2,811 mm (110.7 in)
Length Coupé Cabriolet: 4,626 mm (182.1 in)
Sportback: 4,712 mm (185.5 in)
Width	1,854 mm (73.0 in)
Height	Coupé: 1,372 mm (54.0 in)
Cabriolet: 1,383 mm (54.4 in)
Sportback: 1,391 mm (54.8 in)
Kerb weight	Coupé: 1,500 kg (3,307 lb)
Cabriolet: 1,695 kg (3,737 lb)
Sportback: 1,565 kg (3,450 lb)
Chronology
Predecessor
Audi Coupé (B3)
Audi A4 Cabriolet (8H)
</string>
    <string name="audi_lemans_quatro">
Audi Le Mans quattro
Overview
Manufacturer	Audi AG
Production	2003
Assembly	Neckarsulm, Germany
Body and chassis
Class	Concept car
Body style	2-door coupé
Layout	Mid engine, quattro permanent all-wheel drive
Related	SEAT Cupra GT
Powertrain
Engine	5.0 L DOHC twin-turbocharged TFSI V10
Transmission	6-speed automated manual
Dimensions
Wheelbase	2,649 mm (104.3 in)
Length	4,369 mm (172.0 in)
Width	1,900 mm (74.8 in)
Height	1,245 mm (49.0 in)
Curb weight	1,530 kg (3,370 lb)
Chronology
Predecessor	Audi Rosemeyer
Successor	Audi R8 (Type 42)
    </string>
    <string name="audi_quatro">
        Overview
Manufacturer	Audi
Production	Concept car
Body and chassis
Class	Compact luxury car
Sports coupe
Body style	2-door coupé
Layout	longitudinal front engine,
quattro permanent four-wheel drive
Platform	Volkswagen Group MLB platform
Powertrain
Engine	2.5l TFSI 402.8 hp (300 kW)
Transmission	6-Speed Manual sourced from Audi S5
Dimensions
Wheelbase	2,600 mm (102.4 in)
Length	4,280 mm (168.5 in)
Width	1,860 mm (73.2 in)
Height	1,320 mm (52.0 in)
Curb weight	1,300 kg (2,866.0 lb)
    </string>
    <string name="audi_r8">
        Audi R8 V12 TDI
Overview
Manufacturer	Audi AG
Also called	Audi R8 TDI Le Mans
Production	2008
Assembly	Neckarsulm, Germany
Body and chassis
Class	Concept car
Body style	2-door coupé
Layout	Mid engine, quattro permanent four-wheel drive
Related	Audi R8 V8
Audi Q7
Powertrain
Engine	6.0L V12 TDI
Transmission	6-speed manual
Dimensions
Wheelbase	2,650 mm (104 in)
Curb weight	1,860 kg (4,100 lb)
    </string>
    <string name="audi_rsq">
        Audi RSQ
Overview
Manufacturer	Audi AG
Production	2004
Designer	Julian Hönig (Senior Exterior Designer at Audi AG)[1]
Body and chassis
Class	concept car
film product placement
Body style	2-door coupé
Layout	mid engine, all wheel drive
Platform	Fibreglass construction over aluminium space frame
Related	Audi Le Mans quattro
Audi TT
Lamborghini Gallardo
Powertrain
Engine	5.0 L twin-turbocharged FSI V10
Transmission	6-speed automatic
    </string>
    <string name="ferrari_superfast">
        Overview
Manufacturer	Ferrari
Production	April 2017 – present
Assembly	Maranello, Italy
Designer	Ferrari Styling Centre under Flavio Manzoni[1]
Body and chassis
Class	Grand tourer (S)
Body style
2-door berlinetta
2-door retractable hardtop convertible (812 GTS)
Layout	Front mid-engine, rear-wheel-drive
Related	Ferrari Monza SP
Powertrain
Engine	6.5 L F140 GA V12
Power output	800–830 PS (588–610 kW; 789–819 hp)[2][3]
Transmission	7-speed Magna 7DCL750 dual-clutch
Dimensions
Wheelbase	2,720 mm (107.1 in)[4]
Length	4,657 mm (183.3 in)[4]
Width	1,971 mm (77.6 in)[4]
Height	1,276 mm (50.2 in)[4]
Kerb weight	1,744 kg (3,845 lb)[5]
Chronology
Predecessor	Ferrari F12berlinetta
    </string>
    <string name="ferrari_f8">
        Overview
Manufacturer	Ferrari
Production	2019–present
Model years	2020–present
Assembly	Maranello, Italy
Designer	Ferrari Styling Centre, head of design Flavio Manzoni
Body and chassis
Class	Sports car (S)
Body style	2-door berlinetta
2-door retractable hard-top convertible
Layout	Longitudinal rear mid-engine, rear-wheel-drive
Related	Ferrari SF90 Stradale
Powertrain
Engine	3.9 L F154CD twin-turbo V8
Transmission	7-speed dual-clutch automatic
Dimensions
Wheelbase	2,650 mm (104.3 in)[1]
Length	4,611 mm (181.5 in)[2]
Width	1,979 mm (77.9 in)[2]
Height	1,206 mm (47.5 in)[2]
Kerb weight	1,435 kg (3,164 lb)[1]
Chronology
Predecessor	Ferrari 488
    </string>
    <string name="ferrari_monza">
        Overview
Manufacturer	Ferrari N.V.
Production	2019–present
Model years	2019–present
Assembly	Maranello, Italy
Designer	Ferrari Styling Centre under Flavio Manzoni
Body and chassis
Class	Sports car (S)
Body style	2-door speedster
Layout	Front-engine, rear-wheel-drive
Related	Ferrari 812 Superfast
Powertrain
Engine	6.5 L F140 GC V12
Power output	596 kW (799 hp; 810 PS)
Transmission	7-speed dual clutch
Dimensions
Wheelbase	2,720 mm (107 in)
Length	4,657 mm (183 in)
Width	1,996 mm (79 in)
Height	1,155 mm (45 in)
Kerb weight
SP1: 1,500 kg (3,307 lb)
SP2: 1,520 kg (3,351 lb)
    </string>
    <string name="ferrari_portofino">
        Overview
Manufacturer	Ferrari
Production	2017–present
Assembly	Maranello, Italy
Designer	Ferrari Styling Centre under Flavio Manzoni
Body and chassis
Class	Grand tourer (S)
Body style	2-door, 2+2 retractable hardtop convertible
Layout	Front mid-engine, rear-wheel-drive
Related	Ferrari Roma
Powertrain
Engine	3.9 L Ferrari F154BE V8 (twin-turbocharged)
Transmission	7-speed Magna 7DCL dual-clutch (Portofino)
8-speed Magna 8DCL900 dual-clutch (Portofino M)
Dimensions
Wheelbase	2,670 mm (105.1 in)
Length	4,586 mm (180.6 in)
Width	1,938 mm (76.3 in)
Height	1,318 mm (51.9 in)
Kerb weight	1,664 kg (3,668 lb) (with fluids)
Chronology
Predecessor	Ferrari California T
    </string>
    <string name="ferrari_sf9">
        Overview
Manufacturer	Ferrari
Production	2019–present
Assembly	Maranello, Italy
Designer	Centro Stile Ferrari under Flavio Manzoni
Body and chassis
Class	Sports car (S)
Body style	2-door berlinetta
2-door retractable hard-top convertible
Layout	Longitudinal mid-engine, all-wheel-drive
Related
Ferrari 488
Ferrari F8 Tributo
Powertrain
Engine	4.0 L (3,990 cc) twin-turbocharged Ferrari F154FA V8[1]
Electric motor	3 electric motors (one mounted on the transmission and one on each front wheel)[2]
Power output
Engine: 780 PS (574 kW; 769 hp)
Electric motors: 220 PS (162 kW; 217 hp)
Combined: 1,000 PS (735 kW; 986 hp)
Transmission	8-speed Magna 8DCL900 dual clutch
Hybrid drivetrain	PHEV
Battery	7.9 kWh lithium-ion[2]
Electric range	26 km (16 mi)[2]
Dimensions
Wheelbase	2,650 mm (104.3 in)
Length	4,710 mm (185.4 in)
Width	1,972 mm (77.6 in)
Height	1,186 mm (46.7 in)
Kerb weight
1,600 kg (3,527 lb) (base, dry)
1,570 kg (3,461 lb) (Assetto Fiorano, dry)[3]
1,670 kg (3,682 lb) (spider, kerb)
    </string>
    <string name="bmw_gran">
        Manufacturer	BMW
Production	2019–present
Assembly
Germany: Leipzig (BMW Leipzig Plant)
Thailand: Rayong (BMW Thailand)
Malaysia: Kulim (Inokom)
Body and chassis
Class	Subcompact executive car ©
Body style	4-door fastback sedan
Layout
Front-engine, front-wheel-drive
Front-engine, all-wheel-drive (xDrive)
Platform	BMW UKL2 platform
Related
BMW 1 Series (F40)
BMW 1 Series (F52)
BMW 2 Series Active Tourer (F45)
BMW X1 (F48)
BMW X2 (F39)
Mini Countryman (F60)
Mini Clubman (F54)
Powertrain
Engine
Petrol:
1.5 L B38 I3 turbo
2.0 L B46/B48 I4 turbo
Diesel:
2.0 L B47 I4 turbo
Transmission
6-speed Getrag manual
8-speed Aisin automatic
7-speed M-DCT dual-clutch
Dimensions
Wheelbase	2,670 mm (105.1 in)
Length	4,526 mm (178.2 in)
Width	1,800 mm (70.9 in)
Height	1,420 mm (55.9 in)
Kerb weight	1,350–1,570 kg (2,976–3,461 lb)
    </string>
    <string name="bmw_g22">
        Body style	2-door coupé (G22)
2-door convertible (G23)
5-door liftback (G26, Gran Coupé)
Layout	Front-engine, rear-wheel-drive / all-wheel-drive (xDrive)
Platform	BMW CLAR
Related	BMW i4
BMW 3 Series (G20)
Powertrain
Engine
Petrol:
2.0 L turbocharged B48 I4
Hybrid:
3.0 L turbocharged B58 I6 with 48-volt electric motor
Diesel:
2.0 L turbocharged diesel B47 I4 with 48-volt electric motor
3.0 L turbocharged diesel B57 I6
Transmission	8-speed ZF 8HP automatic
Hybrid drivetrain

Mild hybrid:
I4 turbodiesel + electric motor
I6 turbo + electric motor
Plug-in hybrid:
I4 turbo + electric motor

Dimensions
Wheelbase	2,851 mm (112.2 in)
Length	4,768 mm (187.7 in)
Width	1,852 mm (72.9 in)
Height	1,387 mm (54.6 in)
Chronology
Predecessor	BMW 4 Series (F32)
    </string>
    <string name="bmw_f12">
        BMW 6 Series (F12-F13-F06)
Overview
Production
2011–2018
Assembly	Germany: Dingolfing
Body and chassis
Class	Grand tourer (S)
Body style
2-door convertible (F12)
2-door coupé (F13)
4-door sedan (F06)
Layout
Rear-wheel drive,
All-wheel-drive
Related	BMW 5 Series (F10)
Powertrain
Engine
Petrol:
3.0 L N55 turbo I6
4.4 L N63/S63 twin-turbo V8
Diesel:
3.0 L N57 twin-turbo I6
Dimensions
Wheelbase
F12: 2,855 mm (112.4 in)
F13: 2,855 mm (112.4 in)
F06: 2,968 mm (116.9 in)
Length
F12: 4,894 mm (192.7 in)
F13: 4,894 mm (192.7 in)
F06: 5,007 mm (197.1 in)
Width	1,894 mm (74.6 in)
Height	1,365–1,392 mm (53.7–54.8 in)
Chronology
Predecessor	BMW 6 Series (E63)
Successor	BMW 8 Series (G15),
BMW 6 Series (G32)
    </string>
    <string name="bmw_g14">
        BMW 8 Series (G14-G15-G16)
Overview
Production	2018–present
Assembly	Germany: Dingolfing
Body and chassis
Class
Grand tourer (S) (coupé/convertible)
Executive car (E) (Gran Coupé)
Body style
2-door coupé (G15)
2-door convertible (G14)
4-door fastback sedan (G16)
Layout
Front-engine, rear-wheel-drive
Front-engine, all-wheel-drive (xDrive)
Powertrain
Engine
Petrol- turbocharged:
3.0 L B58 I6
4.4 L N63/S63 V8
Diesel- turbocharged:
3.0 L B57 I6
Transmission	8-speed automatic
Dimensions
Wheelbase
G14/G15: 2,822 mm (111.1 in)
G16: 3,023 mm (119.0 in)
Length
G14/G15: 4,843 mm (190.7 in)
G16: 5,072 mm (199.7 in)
Width	1,902–1,932 mm (74.9–76.1 in)
Height	1,341–1,397 mm (52.8–55.0 in)
Chronology
Predecessor
BMW 6 Series (F06/F12/F13)
BMW 8 Series (E31)
    </string>
    <string name="cars_name">Cars Name</string>
    <string name="cars_brands">Cars Brands</string>
</resources>